@@ -1,3 +1,8 @@
+2012-05-12  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* sysdeps/powerpc/memmove.c (MEMMOVE): Don't return a value if
+	used as bcopy.
+
 2012-05-12  Thomas Schwinge  <thomas@codesourcery.com>
 
 	* io/dup3.c (dup3): Rename to __dup3, add weak alias for dup3.
